add some game logic

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,19 @@
   <body>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
+      var socket = io('/');
+      setInterval(function(){
+        console.log('emit status request');
+        socket.emit('tennis:status');
+      }, 1000);
+
+      socket.on('tennis:status', function(msg){
+        console.log(msg);
+        if(msg.isTurn){
+            socket.emit('tennis:turn', {number: 1});
+        }
+      });
+
     </script>
   </body>
 </html>
